0030428: Modeling Algorithms - BRepBndLib::AddOBB() throws exception on empty Compound

Added missing Bnd_Box::IsVoid() check.